<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_500"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/SearcheditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_6dp"
            android:layout_marginLeft="@dimen/margin_6dp"
            android:layout_marginRight="@dimen/margin_25dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:hint="@string/search_by_name"
            android:maxLength="30"
            android:padding="@dimen/margin_10dp" />

        <ImageView
            android:id="@+id/iv_subbmit_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/SearcheditText"
            android:layout_alignRight="@+id/SearcheditText"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10dp"
            app:srcCompat="@drawable/ic_search"
            tools:ignore="VectorDrawableCompat" />


    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/search_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/margin_8dp"
            android:src="@drawable/ic_search" />


        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:visibility="visible" />




    </RelativeLayout>


</androidx.appcompat.widget.Toolbar>